--- a/Style.css
+++ b/Style.css
@@ -1,1 +1,11 @@
-
+body{
+font-family: Arial, sans-serif;
+      /* margin: 0; */
+      padding: 0;
+      background: linear-gradient(135deg, #6a11cb, #2575fc);
+      color: white;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+}
